[package]
name = "ff_buffer"
version = "0.1.0"
authors = ["Luca Rinaldi <to@lucar.in>"]
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "producer_consumer"
harness = false

[[bench]]
name = "push_pop"
harness = false

[[bench]]
name = "producer_consumer-cpp"
harness = false